Fixed order service keyword vs tablename bug

--- a/OrderService/pom.xml
+++ b/OrderService/pom.xml
@@ -56,6 +56,16 @@
 			<artifactId>CommonService</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.airscholar</groupId>
+			<artifactId>CustomerService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.airscholar</groupId>
+			<artifactId>PaymentService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
