--- a/ShippingService/src/main/resources/application.properties
+++ b/ShippingService/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=secrets.properties
+
 server.port=9093
 ####################################################################
 # Get free access to developer context at https://cloud.axoniq.io/ #
@@ -6,14 +8,13 @@ axon.axonserver.servers=axonserver.cloud.axoniq.io:443
 axon.axonserver.keep-alive-time=0
 axon.axonserver.ssl-enabled=true
 axon.axonserver.context=ordermicroservice@OrderMicroservice
-axon.axonserver.token=DzqLnjMshunTOTnqYfRB
+
 ####################################################################
 # Default H2 Datasource                                            #
 ####################################################################
 spring.datasource.url=jdbc:h2:mem:ShippingServiceDB
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.enabled=true
